Redact ingest processor